fix: Layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,12 @@ p {
 
 .cloud-image-1 {
   border-radius: 0;
-  margin-left: 350px;
+  margin-left: calc(60%);
 }
 
 .cloud-image-2 {
   border-radius: 0;
-  margin-right: 150px;
+  margin-right: 200px;
 }
 
 .top-container {
@@ -147,26 +147,23 @@ hr {
   align-items: center;
   justify-content: center;
   gap: 50px;
+  font-size: 2rem;
 }
 
 .linkedin-image {
-  height: 20px;
+  height: 25px;
   width: 40px;
 }
 
 .credly-image {
   height: 25px;
-  width: 60px;
+  width: 55px;
 }
 
 @media screen and (max-width: 480px) {
   .skill-row {
-    font-size: 25px;
+    font-size: 16px;
     width: 80%;
-  }
-
-  .contact-me {
-    font-size: 2rem;
   }
 
   .footer-note {
